# Programming2Sem

./: 1.txt  CMakeLists.txt  CPolynomial.cpp  CPolynomial.h  README.md  main.cpp
lab1.1/: CClosed_polyline.cpp  CClosed_polyline.h  CMakeLists.txt  CPoint.cpp  CPoint.h  CPolygon.cpp  CPolygon.h  CPolyline.cpp  CPolyline.h  CRegular_polygon.cpp  CRegular_polygon.h  CTrapezoid.cpp  CTrapezoid.h  CTriangle.cpp  CTriangle.h  main.cpp
